--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "STROBE_2019 - Shell, Python, and Git"
+title: "STROBE @CU Boulder"
 
 
 #------------------------------------------------------------
