--- a/_config.yml
+++ b/_config.yml
@@ -31,21 +31,22 @@ repository: <USERNAME>/<PROJECT>
 email: "team@carpentries.org"
 
 # Sites.
-amy_site: "https://amy.software-carpentry.org/workshops"
-carpentries_github: "https://github.com/carpentries"
-carpentries_pages: "https://carpentries.github.io"
-carpentries_site: "https://carpentries.org/"
-dc_site: "https://datacarpentry.org"
-example_repo: "https://github.com/carpentries/lesson-example"
-example_site: "https://carpentries.github.io/lesson-example"
-lc_site: "https://librarycarpentry.org/"
+# amy_site: "https://amy.software-carpentry.org/workshops"
+# carpentries_github: "https://github.com/carpentries"
+# carpentries_pages: "https://carpentries.github.io"
+# carpentries_site: "https://carpentries.org/"
+# dc_site: "https://datacarpentry.org"
+# example_repo: "https://github.com/carpentries/lesson-example"
+# example_site: "https://carpentries.github.io/lesson-example"
+# lc_site: "https://librarycarpentry.org/"
 swc_github: "https://github.com/swcarpentry"
 swc_pages: "https://swcarpentry.github.io"
 swc_site: "https://software-carpentry.org"
-template_repo: "https://github.com/carpentries/styles"
-training_site: "https://carpentries.github.io/instructor-training"
+# template_repo: "https://github.com/carpentries/styles"
+# training_site: "https://carpentries.github.io/instructor-training"
 workshop_repo: "https://github.com/natalie-robinson/2019-05-28-strobe_boulder"
 workshop_site: "https://natalie-robinson.github.io/2019-05-28-strobe_boulder/"
+etherpad_page: https://pad.carpentries.org/STROBE_CU_2019
 
 # Surveys.
 swc_pre_survey: "https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2019-05-28-strobe_boulder
