--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ swc_site: "https://software-carpentry.org"
 # training_site: "https://carpentries.github.io/instructor-training"
 workshop_repo: "https://github.com/natalie-robinson/2019-05-28-strobe_boulder"
 workshop_site: "https://natalie-robinson.github.io/2019-05-28-strobe_boulder/"
-etherpad_page: https://pad.carpentries.org/STROBE_CU_2019
+# etherpad_page: https://pad.carpentries.org/STROBE_CU_2019
 
 # Surveys.
 swc_pre_survey: "https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id=2019-05-28-strobe_boulder
